[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
tonic = "0.8.3"
tonic-web = "0.5.0"

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
